--- a/service.css
+++ b/service.css
@@ -273,9 +273,8 @@
 
 
  body{
-   background-color: #c5d2d6;
-   justify-content: center;
-} 
+   background-color: rgb(172, 197, 135);
+ }
 
 
 .flame {
@@ -291,6 +290,7 @@
     margin-bottom: 5px;
   }
 }
+
 .imej{
    width:100%;
    /* margin-left: 5%; */
@@ -310,4 +310,31 @@ footer{
    text-align: center;
    display: grid;
    grid-template-columns: auto auto auto auto auto;
+}
+
+
+/* .flexy{
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   width: 100%;
+}
+
+.flex1{
+   display: flex;
+   flex-direction: column;
+   flex-basis: 100%;
+   flex: 1 0 1;
+} */
+
+.half-half{
+   display: grid;
+   grid-template-columns:auto auto  ;
+}
+
+@media (max-width:630px) {
+   .half-half{
+      display: flex;
+      flex-direction: column;
+   }
 }
